--- a/datetime.html
+++ b/datetime.html
@@ -2,11 +2,16 @@
 <html>
 <head>
 </head>
+<style>
+#date-time{
+color: White;
+font-weight: bolder;
+}
+</style>
 <body>
 <!--p>Current Date and Time is <span id='date-time'></span>.</p-->
 <p><span id='date-time'></span></p>
 <script>
- 
     var dt = new Date();
     document.getElementById('date-time').innerHTML=dt;
     </script>
