--- a/datetime.html
+++ b/datetime.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<style>
-#date-time{
-color: White;
-font-weight: bolder;
-}
-</style>
-<body>
-<!--p>Current Date and Time is <span id='date-time'></span>.</p-->
-<p><span id='date-time'></span></p>
-<script>
+  <head></head>
+  <style>
+    #date-time {
+      color: White;
+      font-weight: bolder;
+    }
+  </style>
+  <body>
+    <!--p>Current Date and Time is <span id='date-time'></span>.</p-->
+    <p>
+      <span id='date-time'></span>
+    </p>
+    <!--script>
     var dt = new Date();
     document.getElementById('date-time').innerHTML=dt;
+</script-->
+    <script>
+      function setCurrentTime() {
+        var myDate = new Date();
+        let daysList = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+        let monthsList = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Aug', 'Oct', 'Nov', 'Dec'];
+        let date = myDate.getDate();
+        let month = monthsList[myDate.getMonth()];
+        let year = myDate.getFullYear();
+        let day = daysList[myDate.getDay()];
+        let today = `${date} ${month} ${year}, ${day}`;
+        let amOrPm;
+        let twelveHours = function() {
+          if (myDate.getHours() > 12) {
+            amOrPm = 'PM';
+            let twentyFourHourTime = myDate.getHours();
+            let conversion = twentyFourHourTime - 12;
+            return `${conversion}`
+          } else {
+            amOrPm = 'AM';
+            return `${myDate.getHours()}`
+          }
+        };
+        let hours = twelveHours();
+        let minutes = myDate.getMinutes();
+        let seconds = myDate.getSeconds();
+        let currentTime = `${hours}:${minutes}:${seconds} ${amOrPm}`;
+        document.getElementById('date-time').innerText = today + ' ' + currentTime
+      }
+      setInterval(function() {
+        setCurrentTime();
+      }, 1000);
     </script>
-</body>
+  </body>
 </html>
